feat(api): add an endpoint to get examination timetable items by case id
