# apps/api/src/server/swagger-output.json
@@ -1680,6 +1680,29 @@
 					}
 				}
 			}
+		},
+		"/applications/examination-timetable-items": {
+			"get": {
+				"tags": ["Applications"],
+				"description": "Gets all examination timetable items for case",
+				"parameters": [
+					{
+						"name": "caseId",
+						"in": "path",
+						"description": "Application ID",
+						"required": true,
+						"type": "integer"
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "List of examination timetable items",
+						"schema": {
+							"$ref": "#/definitions/ExaminationTimetableItems"
+						}
+					}
+				}
+			}
 		}
 	},
 	"definitions": {
@@ -2175,6 +2198,50 @@
 					"displayNameCy": {
 						"type": "string",
 						"example": "Accompanied site inspection Cy"
+					}
+				}
+			}
+		},
+		"ExaminationTimetableItems": {
+			"type": "array",
+			"items": {
+				"type": "object",
+				"properties": {
+					"id": {
+						"type": "number",
+						"example": 1
+					},
+					"caseId": {
+						"type": "number",
+						"example": 1
+					},
+					"examinationTypeId": {
+						"type": "number",
+						"example": 1
+					},
+					"name": {
+						"type": "string",
+						"example": "Exmaination Timetable Item"
+					},
+					"description": {
+						"type": "string",
+						"example": "Exmaination Timetable Item Description"
+					},
+					"displayNameEn": {
+						"type": "string",
+						"example": "Accompanied site inspection"
+					},
+					"date": {
+						"type": "string",
+						"example": "2023-02-27T10:00:00Z"
+					},
+					"startDate": {
+						"type": "string",
+						"example": "2023-02-27T10:00:00Z"
+					},
+					"endDate": {
+						"type": "string",
+						"example": "2023-02-27T12:00:00Z"
 					}
 				}
 			}
